# charitymap

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  DATA_MODEL.md  LICENSE  MILESTONES.md  Makefile  PRODUCT_SPEC.md  README.md  docker-compose.yml
.github/workflows/: frontend.yml  importer.yml  scheduled-import.yml
docs/: DECISIONS.md  IATI_IMPORT.md
frontend/: AGENTS.md  README.md  package-lock.json  package.json  vitest.config.ts
frontend/public/data/: README.md  countries-110m.geojson
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/health/: route.ts
frontend/src/app/methodology/: page.tsx
frontend/src/components/: activity-feed.test.tsx  activity-feed.tsx  dashboard-shell.test.tsx  dashboard-shell.tsx  map-panel.tsx
frontend/src/lib/: domain.ts  funding-events.test.ts  funding-events.ts  map-coverage.test.ts  map-coverage.ts  mock-data.ts
importer/: README.md  pyproject.toml
importer/src/charitymap_importer/: __init__.py  cli.py  config.py  database.py  models.py  pipeline.py
importer/src/charitymap_importer/sources/: __init__.py  demo.py  iati.py
importer/tests/: test_database_integration.py  test_iati.py  test_models.py  test_pipeline.py
supabase/migrations/: 202607180001_initial_schema.sql  202607190001_iati_imports.sql
